<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".EditTaskFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/task_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:hint="@string/name_task"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <CheckBox
        android:id="@+id/task_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/isDone"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_name_edit" />

    <TextView
        android:id="@+id/title_date"
        android:text="@string/title_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        app:layout_constraintTop_toBottomOf="@+id/task_done"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/task_date"
        android:text="@string/choose_date"
        android:layout_width="0dp"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/title_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/img_calendar"
        />

    <ImageView
        android:id="@+id/img_calendar"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/task_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/task_date"
        app:layout_constraintTop_toTopOf="@+id/task_date"
        android:contentDescription="@string/content_description_img_calendar"
        android:src="@drawable/icon_calendar"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:background="@drawable/button_drawble"
        android:textColor="@color/black"
        android:state_selected="true"
        android:text="@string/delete_task"
        android:layout_marginTop="15dp"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_date" />
</androidx.constraintlayout.widget.ConstraintLayout>
